[chore]: update unit1 study guide

--- a/_posts/2024-02-01-unit1.md
+++ b/_posts/2024-02-01-unit1.md
@@ -6,21 +6,36 @@ aside:
   toc: true
 ---
 
-# Topics
+## Topics
 
-## 1.1 View of Data  
-## 1.2 Purpose of Database Systems  
-## 1.3 History of Database Systems  
+### 1.1 View of Data  
+### 1.2 Purpose of Database Systems  
+- ### Flat Files VS DBMS
+
+| Feature             | Flat Files                                                 | Database Management Systems                                              |
+|---------------------|------------------------------------------------------------|--------------------------------------------------------------------------|
+| Data structure      | No formal structure, data stored in text files             | Formally defined logical structure with relations between entities       |
+| Data redundancy     | High potential for data redundancy                         | Minimizes data redundancy through normalization                          |
+| Access control      | Minimal to none                                            | Sophisticated mechanisms for access control and permissions              |
+| Concurrency control | None, which can cause issues with simultaneous user access | Concurrency control methods to enable simultaneous access without issues |
+| Data integrity      | No enforcement of integrity constraints                    | Integrity constraints protect data accuracy and consistency              |
+| Query capabilities  | None or limited to manual scans of entire file             | Powerful query language (SQL) enables complex queries                    |
+| Data security       | Minimal protections beyond file system permissions         | Advanced security features like encryption and authentication            |
+| Scalability         | Not scalable as data volumes grow                          | Highly scalable into very large data sets                                |
+| Backup & recovery   | Manual backup and recovery                                 | Automated backup, recovery and replication features                      |
+
+
+### 1.3 History of Database Systems  
 
  <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/historyOfDB.png" alt="History of Database Systems">
 
 
-## 1.4 Database-System Applications
-## 1.5 Database Languages
-## 1.6 Database Design
-## 1.7 Database Engine
-## 1.8 Database and Application Architecture 
-## 1.9 Database Users and Administrators
+### 1.4 Database-System Applications
+### 1.5 Database Languages
+### 1.6 Database Design
+### 1.7 Database Engine
+### 1.8 Database and Application Architecture 
+### 1.9 Database Users and Administrators
 
 
 
