[chore]: update unit1 study guide and useful links

--- a/_posts/2024-02-01-unit1.md
+++ b/_posts/2024-02-01-unit1.md
@@ -9,6 +9,10 @@ aside:
 ## Topics
 
 ### 1.1 View of Data  
+
+- ### Data Modeling
+  ### Entity Relationship Diagrams
+    - [ERD and DB Implementation](https://guides.visual-paradigm.com/erd-and-database-implementation-bridging-the-gap-between-concept-and-reality/)
 ### 1.2 Purpose of Database Systems  
 - ### Flat Files VS DBMS
 
