[practical]: update practical 2

--- a/_posts/2024-02-24-practical2.md
+++ b/_posts/2024-02-24-practical2.md
@@ -80,7 +80,7 @@ aside:
      avg_fare
     WHERE c.Fare > avg_fare.avg_fare;
    ```
-### Task 2: Aggregate with Grouping
+## Task 2: Aggregate with Grouping
 
 Find the average ticket fare for each class type:
 
@@ -101,7 +101,7 @@ Find the number of distinct destinations across all flights:
 SELECT COUNT(DISTINCT Destination) AS distinct_destinations
 FROM Flight;
 ```
-### Task 3: Having Clause
+## Task 3: Having Clause
 
 ```javascript
 SELECT Source, COUNT(*) AS NumberOfFlights, AVG(Distance) AS AverageDistance 
@@ -117,7 +117,7 @@ This query:
 4. Uses HAVING clause to only include groups with average distance greater than 2000 miles
 5. Orders the result by descending number of flights
    
-### Task 4: Date and Time Manipulation
+## Task 4: Date and Time Manipulation
 
 Extract the year and month from ticket booking date time:
 
@@ -132,7 +132,7 @@ SELECT Flight_no, Dep_time, Destination,
        Arr_time + INTERVAL '5 hours' AS Arr_time_new
 FROM Flight;
 ```
-### Task 5: Output Redirection
+## Task 5: Output Redirection
 
 1. Create a new table with distinct flight numbers:
 ```javascript
@@ -161,7 +161,7 @@ SELECT Flight_no, SUM(Distance) AS Total_Miles,
 FROM Flight
 GROUP BY Flight_no;
 ```
-### Task 6: Output Control
+## Task 6: Output Control
 
 1. Limit
 ```javascript
@@ -178,9 +178,9 @@ ON t.Class_id = c.Class_id
 ORDER BY c.Fare DESC
 LIMIT 10;
 ```
-### Task 8: Nested Subqueries
+## Task 8: Nested Subqueries
 
-1. Set Membership
+### 1. Set Membership
 
 ```javascript
 SELECT *
@@ -202,7 +202,7 @@ This query:
 - Gets the flight numbers from those tickets
 - Finds details of all those flights (outer query)
 
-2. Set Comparison
+### 2. Set Comparison
 
 ```javascript
 SELECT a.*
@@ -218,7 +218,7 @@ WHERE EXISTS (
                            WHERE a3.Airline_name = 'Indigo')
 );
 ```
-3. Test for Empty Relations
+### 3. Test for Empty Relations
 
 ```javascript
 SELECT a.Airline_name
@@ -235,7 +235,7 @@ This query:
 - Use a correlated nested subquery to check if there are any flights for each airline's flight number
 - Returns those airlines for which there are no matching flights
 
-4. Test for the Absence of Duplicate Tuples
+### 4. Test for the Absence of Duplicate Tuples
 ```javascript
 SELECT *
 FROM Flight
@@ -250,7 +250,7 @@ WHERE Flight_no NOT IN (
 );
 ```
 
-5. Subqueries in the FROM clause
+### 5. Subqueries in the FROM clause
 
 ```javascript
 SELECT *
@@ -261,7 +261,7 @@ FROM (
 ) AS ticket_counts
 WHERE num_tickets > 1;
 ```
-5. With Clause
+### 6. With Clause
 
 calculate the total fare paid by each user:
 ```javascript
@@ -275,7 +275,7 @@ SELECT u.Username, u.F_Name, u.L_Name, tfp.total_fare
 FROM Users u
 LEFT JOIN TotalFarePerUser tfp ON u.Username = tfp.Booked_by_user;
 ```
-6. Scalar Subquery
+### 7. Scalar Subquery
 
 ```javascript
 SELECT Username, 
@@ -287,7 +287,7 @@ FROM Users;
   SELECT 5 * 5 AS square;
   ```
 
-### Task 9: Window Functions
+## Task 9: Window Functions
 
 Window functions are a powerful feature in SQL that allow you to perform calculations across a set of rows related to the current row.
 These functions operate on a "window" of rows defined by a partition or an entire result set. 
