[practical]: update practical 3

--- a/_posts/2024-03-05-practical3.md
+++ b/_posts/2024-03-05-practical3.md
@@ -23,7 +23,7 @@ CREATE DATABASE EHRDB;
 ###  USE Database(Change your database)
 
 ```javascript
-\c EHRBD
+\c ehrdb
 ```
 ### CREATE Table
 ```javascript
@@ -176,7 +176,7 @@ INSERT INTO MedicalBill (MedicalBillID, PatientID, InsuranceProvider, PolicyNumb
 VALUES
     (1, 1, 'ABC Insurance', '123456', 'In-network coverage'),
     (2, 2, 'XYZ Insurance', '654321', 'Out-of-network coverage'),
-    (3, 3, 3, 'DEF Insurance', '987654', 'Full coverage'),
+    (3, 3, 'DEF Insurance', '987654', 'Full coverage'),
     (4, 4, 'GHI Insurance', '456789', 'Partial coverage'),
     (5, 5, 'JKL Insurance', '987654', 'In-network coverage'),
     (6, 6, 'MNO Insurance', '321456', 'Out-of-network coverage'),
@@ -263,8 +263,25 @@ A left outer join returns all records from the left table (the first table speci
   After creating this view, you can query it like a regular table to retrieve patient details along with their upcoming appointments:
 
   ```javscript
-  SELECT * FROM DoctorAppointmentsView WHERE DoctorID = 1;
+  SELECT * FROM DoctorAppointmentsView;
   ```
+  Create user doctor
+
+  ```javascript
+  CREATE USER doctor WITH PASSWORD '12345';
+  ```
+
+  Grant Accees to doctor
+
+  ```javascript
+  GRANT SELECT ON DoctorAppointmentsView TO doctor;
+  ```
+  Access DB as 'doctor' user
+
+  ```javascript
+  psql -U doctor -d your_database_name
+  ```
+
   ### - Materialized Views
   Materialized views are useful when you want to precompute and store the results of a query. This can improve query performance, especially for complex queries that are frequently executed. 
   
