[practical]: update practical 4

--- a/_posts/2024-03-06-practical4.md
+++ b/_posts/2024-03-06-practical4.md
@@ -243,6 +243,9 @@ if __name__ == '__main__':
 1. Create a file connect.py and add the following lines of code
 
 ```javascript
+import psycopg2
+from config import load_config
+
 def connect(config):
     """ Connect to the PostgreSQL database server """
     try:
