[practical]: update practical 4

--- a/_posts/2024-03-06-practical4.md
+++ b/_posts/2024-03-06-practical4.md
@@ -280,45 +280,35 @@ pip install flask
 - Inside templates creade index.html file and add the following code:
 
 ```javascript
-from flask import Flask, render_template, request
-import psycopg2
-from config import load_config
-
-app = Flask(__name__)
-
-def get_patients():
-    config = load_config()
-    try:
-        with psycopg2.connect(**config) as conn:
-            with conn.cursor() as cur:
-                cur.execute("SELECT * FROM patient;")
-                return cur.fetchall()
-            
-    except (Exception, psycopg2.DatabaseError) as error:
-        print(error)
-        return []
-
-@app.route('/')
-def index():
-    patients = get_patients()
-    return render_template('index.html', patients=patients)
-
-@app.route('/search', methods=['POST'])
-def search():
-    search_query = request.form.get('search_query')
-    config = load_config()
-    try:
-        with psycopg2.connect(**config) as conn:
-            with conn.cursor() as cur:
-                cur.execute("SELECT * FROM patient WHERE name ILIKE %s;", ('%' + search_query + '%',))
-                patients = cur.fetchall()
-        return render_template('index.html', patients=patients)
-    except (Exception, psycopg2.DatabaseError) as error:
-        print(error)
-        return render_template('index.html', patients=[])
-
-if __name__ == '__main__':
-    app.run(debug=True)
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Patients</title>
+</head>
+<body>
+    <h1>Patients</h1>
+    <form action="/search" method="post">
+        <input type="text" name="search_query" placeholder="Search by patient name">
+        <button type="submit">Search</button>
+    </form>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Gender</th>
+            <!-- Add more columns if needed -->
+        </tr>
+        {% for patient in patients %}
+        <tr>
+            <td>{{ patient[1] }}</td>
+            <td>{{ patient[2] }}</td>
+            <td>{{ patient[3] }}</td>
+            <!-- Display more patient details as needed -->
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+</html>
 ```
 
 - Inside the project directory create another file, name it app.py, add the following lines of code:
