[practical]: update practical 4

--- a/_posts/2024-03-06-practical4.md
+++ b/_posts/2024-03-06-practical4.md
@@ -78,7 +78,6 @@ GRANT INSERT ON TABLE Prescription TO user2;
 - GRANT DELETE PRIVILEGE
 ```javascript
 GRANT DELETE ON MedicalHistory TO user2;
-
 ```
 - GRANT ALL PRIVILEGES
 ```javascript
@@ -108,7 +107,7 @@ GRANT doctor_role TO user2;
 ```
 
 ## Task 4: Authorisation on View
-```javascriptt
+```javascript
 CREATE OR REPLACE VIEW DoctorAppointmentsView AS
 SELECT 
     P.PatientID,
@@ -169,7 +168,7 @@ CREATE ROLE appointment_viewer;
 GRANT SELECT ON Appointment TO appointment_viewer;
 ```
 
-```javscript
+```javascript
 CREATE POLICY appointment_viewer_policy
     ON MedicalHistory
     USING (EXISTS (
@@ -215,7 +214,7 @@ user= user1
 password='12345'
 ```
 
-- Create a configuraltion file config.py add the following lines of code to the file:
+- Create a configuration file: config.py and add the following lines of code to the file:
 
 ```javascript
 from configparser import ConfigParser
@@ -240,7 +239,7 @@ if __name__ == '__main__':
     print(config)
 ```
 
-1. Create a file connect.py and add the following lines of code
+1. Create a file: connect.py and add the following lines of code
 
 ```javascript
 import psycopg2
@@ -268,7 +267,11 @@ Run the file
 python connect.py
 ```
 
-Output should be Connected to the PostgreSQL server. If connection is successful.
+Output should be: 
+```javascript
+Connected to the PostgreSQL server. 
+```
+If connection is successful.
 
 5. Sending SQL query and Displaying Output on webpage
 
@@ -277,7 +280,7 @@ Output should be Connected to the PostgreSQL server. If connection is successful
 pip install flask
 ```
 - Create a folder called templates inside your project
-- Inside templates creade index.html file and add the following code:
+- Inside templates create index.html file and add the following code:
 
 ```javascript
 <!DOCTYPE html>
