[practical]: update practical 5

--- a/_posts/2024-03-11-practical5.md
+++ b/_posts/2024-03-11-practical5.md
@@ -412,6 +412,6 @@ FROM pokemon_evolution_chain;
 # Practical 5 Exercise
 
 ## Create a reddit comments database
-- [Link to reddit commentd database](https://clickhouse.com/docs/en/getting-started/example-datasets/reddit-comments)
+- [Link to reddit comments database](https://clickhouse.com/docs/en/getting-started/example-datasets/reddit-comments)
 
 ## Perform all tasks given in the guided session on the database
