[practical]: update practical 3

--- a/_posts/2024-03-05-practical3.md
+++ b/_posts/2024-03-05-practical3.md
@@ -206,7 +206,7 @@ JOIN Diagnosis ON Patient.PatientID = Diagnosis.PatientID;
 
 ## Task 3: Outer Join
 
-  ### Left Join
+- ### Left Join
 A left outer join returns all records from the left table (the first table specified in the JOIN clause), and the matched records from the right table. If there is no match, NULL values are returned for the columns of the right table.
 
 ```javascript
@@ -215,7 +215,7 @@ A left outer join returns all records from the left table (the first table speci
     LEFT JOIN Appointment ON Patient.PatientID = Appointment.PatientID;
 ```
 
-  ### Right Join
+- ### Right Join
  A right outer join returns all records from the right table (the second table specified in the JOIN clause), and the matched records from the left table. If there is no match, NULL values are returned for the columns of the left table.
 
 ```javascript
@@ -223,7 +223,7 @@ A left outer join returns all records from the left table (the first table speci
     FROM Appointment
     RIGHT JOIN Patient ON Patient.PatientID = Appointment.PatientID;
 ```
-  ### Full Outer Join
+- ### Full Outer Join
  A full outer join returns all records when there is a match in either the left or right table. If there is no match, NULL values are returned for the columns of the table that lacks a match.
 ```javascript
     SELECT *
@@ -232,7 +232,7 @@ A left outer join returns all records from the left table (the first table speci
 ```
 
 ## Task 4: Views
-  ### - View Definition
+- ### View Definition
   Let's create a scenario where we want to create a view that combines information from the Patient and Appointment tables. Suppose we want to create a view that shows patient details along with their upcoming appointments.
   ```javascript
     CREATE VIEW DoctorAppointmentsView AS
@@ -282,7 +282,7 @@ A left outer join returns all records from the left table (the first table speci
   psql -U doctor -d your_database_name
   ```
 
-  ### - Materialized Views
+- ### Materialized Views
   Materialized views are useful when you want to precompute and store the results of a query. This can improve query performance, especially for complex queries that are frequently executed. 
   
   Let's consider creating a materialized view for the scenario where we want to show patient details along with their upcoming appointments.
@@ -320,64 +320,59 @@ A left outer join returns all records from the left table (the first table speci
 ```javascript
 START TRANSACTION;
 ```
--- Step 1: Create a new appointment for the patient
+- Step 1: Create a new appointment for the patient
 ```javascript
 INSERT INTO Appointment (PatientID, DoctorID, AppointmentDate, AppointmentTime, Purpose)
 VALUES (1, 1, '2024-03-06', '10:00:00', 'Regular checkup');
 ```
--- Step 2: Update the patient's medical history
+- Step 2: Update the patient's medical history
 ```Javascript
 UPDATE MedicalHistory
 SET MedicalHistoryDetails = 'Patient has a history of asthma.'
 WHERE PatientID = 1;
 ```
--- Step 3: Add a new prescription for the patient
+- Step 3: Add a new prescription for the patient
 ```javascript
 INSERT INTO Prescription (DoctorID, PatientID, MedicationName, Dosage, Frequency, StartDate, EndDate)
 VALUES (1, 1, 'Ventolin', '2 puffs', 'As needed', '2024-03-06', '2024-04-06');
 ```
--- Check if all operations are successful
--- If successful, commit the transaction
+- Check if all operations are successful
+- If successful, commit the transaction
 ```javascript
 COMMIT WORK;
 ```
--- If any operation fails, rollback the transaction
+- If any operation fails, rollback the transaction
 ```javascript
 ROLLBACK WORK;
 ```
 ## Task 6: Integrity Constraints
 
 - ### Constraints
-  - Not Null Constraint
-    The Not Null Constraint ensures that a column cannot contain a NULL value.
+  - Not Null Constraint: The Not Null Constraint ensures that a column cannot contain a NULL value.
     Suppose you want to ensure that every patient record must have a name associated with it. By adding a Not Null Constraint to the Name column, you prevent any new patient record from being inserted without specifying a name.
     ```javascript
     ALTER TABLE Patient
     MODIFY Name VARCHAR(100) NOT NULL;
     ```
-  - Unique Constraint
-    The Unique Constraint ensures that all values in a column are unique.
+  - Unique Constraint: The Unique Constraint ensures that all values in a column are unique.
     Suppose you want to ensure that each patient's email address is unique. By adding a Unique Constraint to the Email column, you prevent multiple patients from having the same email address.
     ```javascript
     ALTER TABLE Patient
     ADD CONSTRAINT unique_email UNIQUE (Email);
     ```
-  - Check Clause
-    The Check Clause enforces a condition on data being entered into a column.
+  - Check Clause: The Check Clause enforces a condition on data being entered into a column.
     Suppose you want to ensure that the date of birth for a patient is not in the future. By adding a Check Constraint to the DateOfBirth column, you enforce this condition.
     ```javascript
     ALTER TABLE Patient
     ADD CONSTRAINT check_age CHECK (DateOfBirth < CURRENT_DATE);
     ```
-  - Assigning Names to Constraints
-    Assigning names to constraints helps in identifying them easily and provides meaningful error messages.
+  - Assigning Names to Constraints: Assigning names to constraints helps in identifying them easily and provides meaningful error messages.
     Suppose you want to give a specific name to a Unique Constraint on the Email column in the Patient table to easily identify it in case of constraint violations.
     ```javascript
     ALTER TABLE Patient
     ADD CONSTRAINT unique_email_patient UNIQUE (Email);
     ```
-  - Integrity Constraint Violation During a Transaction
-    Handling constraint violations during a transaction by rolling back the changes if any violation occurs.
+  - Integrity Constraint Violation During a Transaction: Handling constraint violations during a transaction by rolling back the changes if any violation occurs.
 
     Suppose you attempt to insert a new patient record without specifying a name, violating the Not Null Constraint. In such cases, you want to rollback the transaction to maintain data integrity.
 
@@ -393,8 +388,7 @@ ROLLBACK WORK;
     ```javascript
     ROLLBACK WORK;
     ```
-  - Complex Check Conditions and Assertions
-    Using complex check conditions and assertions to enforce more sophisticated data integrity rules.
+  - Complex Check Conditions and Assertions: Using complex check conditions and assertions to enforce more sophisticated data integrity rules.
 
     Suppose you  want to ensure that the end date of a prescription is always greater than the start date. By adding a Check Constraint with a complex condition to the Prescription table, you enforce this rule.
 
