[practical]: update practical 5

--- a/_posts/2024-03-11-practical5.md
+++ b/_posts/2024-03-11-practical5.md
@@ -258,29 +258,77 @@ Example Database: PokeDB
 ## Task 1: Functions in SQL
 This function calculates the height-to-weight ratio of a Pokémon based on its ID.
 ```javascript
-CREATE OR REPLACE FUNCTION calculate_pokemon_height_weight_ratio(pokemon_id INT) RETURNS NUMERIC AS $$
+CREATE OR REPLACE FUNCTION calculate_pokemon_height_weight_ratio(pokemon_id INT)
+RETURNS NUMERIC AS $$
 DECLARE
     pokemon_height INT;
     pokemon_weight INT;
     height_weight_ratio NUMERIC;
 BEGIN
-    SELECT height, weight INTO pokemon_height, pokemon_weight FROM pokemon WHERE id = pokemon_id;
+    SELECT p.height, p.weight
+    INTO pokemon_height, pokemon_weight
+    FROM pokemon p
+    WHERE p.id = calculate_pokemon_height_weight_ratio.pokemon_id;
+
     IF pokemon_weight != 0 THEN
         height_weight_ratio := pokemon_height::NUMERIC / pokemon_weight::NUMERIC;
     ELSE
         height_weight_ratio := NULL;
     END IF;
+
     RETURN height_weight_ratio;
 END;
+$$ LANGUAGE plpgsql;
+```
+Use the function to perform queries
+
+```javascript
+SELECT calculate_pokemon_height_weight_ratio(1);
+```
+```javascript
+SELECT p.identifier, p.height, p.weight
+FROM pokemon p
+WHERE calculate_pokemon_height_weight_ratio(p.id) > 1.5;
 ```
 ## Task 2: Procedures in SQL
 This procedure updates the base experience of a Pokémon based on its ID.
 ```javascript
-CREATE OR REPLACE PROCEDURE update_pokemon_base_experience(pokemon_id INT, new_experience INT) AS $$
+CREATE OR REPLACE PROCEDURE update_pokemon_base_experience(
+    pokemon_id INT,
+    new_experience INT
+)
+LANGUAGE plpgsql
+AS $$
 BEGIN
-    UPDATE pokemon SET base_experience = new_experience WHERE id = pokemon_id;
+    UPDATE pokemon p
+    SET base_experience = update_pokemon_base_experience.new_experience
+    WHERE p.id = update_pokemon_base_experience.pokemon_id;
 END;
+$$;
 ```
+Call the procedure
+```javascript
+CALL update_pokemon_base_experience(1, 200);
+```
+The procedure can also be called from another SQL statement or procedure.
+
+```javascript
+CREATE OR REPLACE FUNCTION update_and_get_pokemon(pokemon_id INT, new_experience INT)
+RETURNS pokemon
+LANGUAGE plpgsql
+AS $$
+DECLARE
+    updated_pokemon pokemon;
+BEGIN
+    CALL update_pokemon_base_experience(pokemon_id, new_experience);
+    SELECT * INTO updated_pokemon FROM pokemon WHERE id = pokemon_id;
+    RETURN updated_pokemon;
+END;
+$$;
+
+SELECT * FROM update_and_get_pokemon(1, 250);
+```
+
 ## Task 3: Table functions
 
 The SQL standard supports functions that can return tables as results; such functions are called table functions. 
@@ -292,89 +340,126 @@ the regular notion of views by allowing parameters.
 This table function retrieves Pokémon based on a given type identifier.
 
 ```javascript
-CREATE OR REPLACE FUNCTION get_pokemon_by_type(type_identifier VARCHAR(100)) RETURNS TABLE (
+CREATE OR REPLACE FUNCTION get_pokemon_by_type(type_identifier VARCHAR(100))
+RETURNS TABLE (
     pokemon_id INT,
     pokemon_identifier VARCHAR(100),
     pokemon_type VARCHAR(100),
     pokemon_color VARCHAR(100),
     pokemon_shape VARCHAR(100)
-) AS $$
+)
+AS $$
 BEGIN
     RETURN QUERY
-    SELECT p.id, p.identifier, t.identifier AS type, c.identifier AS color, s.identifier AS shape
-    FROM pokemon p
-    INNER JOIN pokemon_types pt ON p.id = pt.id
-    INNER JOIN types t ON pt.type_id = t.id
-    INNER JOIN pokemon_species ps ON p.species_id = ps.id
-    INNER JOIN pokemon_colors c ON ps.color_id = c.id
-    INNER JOIN pokemon_shapes s ON ps.shape_id = s.id
-    WHERE t.identifier = type_identifier;
+    SELECT
+        id,
+        identifier,
+        type,
+        color,
+        shape
+    FROM
+        pokemon_with_type
+    WHERE
+        type = get_pokemon_by_type.type_identifier;
 END;
+$$ LANGUAGE plpgsql;
+```
+Using the crearted function
+SELECT * FROM get_pokemon_by_type('grass');
+```javascript
+
 ```
 ## Task 4: Language Constructs for Procedures and Functions
 - ### While loop
 This function prints numbers from 1 up to a specified limit using a while loop.
 ```javascript
-CREATE OR REPLACE FUNCTION print_numbers_up_to_limit(limit INT) RETURNS VOID AS $$
+CREATE OR REPLACE FUNCTION print_numbers_up_to_limit(lmt INT)
+RETURNS VOID AS $$
 DECLARE
     counter INT := 1;
+    pokemon_row RECORD;
 BEGIN
-    WHILE counter <= limit LOOP
-        RAISE NOTICE 'Number: %', counter;
-        counter := counter + 1;
+    FOR pokemon_row IN SELECT id, identifier FROM pokemon LOOP
+        WHILE counter <= lmt LOOP
+            RAISE NOTICE 'Pokémon ID: %, Identifier: %, Number: %', pokemon_row.id, pokemon_row.identifier, counter;
+            counter := counter + 1;
+        END LOOP;
+        counter := 1; -- Reset the counter for the next Pokémon
     END LOOP;
 END;
+$$ LANGUAGE plpgsql;
+```
+Using the function
+```javascript
+SELECT print_numbers_up_to_limit(5);
 ```
 - ### For loop
 ```javascript
-CREATE OR REPLACE FUNCTION calculate_total_experience() RETURNS INT AS $$
+CREATE OR REPLACE FUNCTION calculate_total_experience()
+RETURNS INT AS $$
 DECLARE
     total_experience INT := 0;
+    pokemon_row pokemon;
 BEGIN
-    FOR pokemon_row IN SELECT base_experience FROM pokemon LOOP
+    FOR pokemon_row IN SELECT * FROM pokemon LOOP
         total_experience := total_experience + pokemon_row.base_experience;
     END LOOP;
     RETURN total_experience;
 END;
+$$ LANGUAGE plpgsql;
+```
+Using the function
+```javascript
+SELECT calculate_total_experience();
 ```
 - ### If statement
 ```javascript
-CREATE OR REPLACE FUNCTION get_pokemon_color_name(color_id INT) RETURNS VARCHAR(100) AS $$
+CREATE OR REPLACE FUNCTION get_pokemon_color_name(color_id INT)
+RETURNS VARCHAR(100) AS $$
 DECLARE
     color_name VARCHAR(100);
 BEGIN
-    IF color_id = 1 THEN
-        color_name := 'Red';
-    ELSIF color_id = 2 THEN
-        color_name := 'Blue';
-    ELSIF color_id = 3 THEN
-        color_name := 'Yellow';
-    ELSE
+    SELECT identifier INTO color_name
+    FROM pokemon_colors
+    WHERE id = get_pokemon_color_name.color_id;
+
+    IF color_name IS NULL THEN
         color_name := 'Unknown';
     END IF;
-    
+
     RETURN color_name;
 END;
+$$ LANGUAGE plpgsql;
+```
+Using the function
+```javascript
+SELECT get_pokemon_color_name(1);
 ```
 
 ## Task 5: External Language Routines
 This function retrieves the count of Pokémon based on a given type identifier using Python as the procedural language.
 ```javascript
-CREATE OR REPLACE FUNCTION get_pokemon_count_by_type(type_identifier VARCHAR(100)) RETURNS INT AS $$
+CREATE OR REPLACE FUNCTION get_pokemon_count_by_type(type_identifier VARCHAR(100))
+RETURNS INT AS $$
 DECLARE
     pokemon_count INT := 0;
 BEGIN
-    EXECUTE 'SELECT COUNT(*) FROM pokemon p INNER JOIN pokemon_types pt ON p.id = pt.id INNER JOIN types t ON pt.type_id = t.id WHERE t.identifier = $1'
-    INTO pokemon_count
-    USING type_identifier;
+    SELECT COUNT(*) INTO pokemon_count
+    FROM pokemon_with_type
+    WHERE type = get_pokemon_count_by_type.type_identifier;
     RETURN pokemon_count;
 END;
+$$ LANGUAGE plpgsql;
 ```
-
+Using the function
+```javascript
+SELECT get_pokemon_count_by_type('grass');
+```
 ## Task 6: Triggers in SQL
 This trigger ensures that the base experience of a Pokémon cannot be negative.
 ```javascript
-CREATE OR REPLACE FUNCTION update_pokemon_base_experience_trigger() RETURNS TRIGGER AS $$
+CREATE OR REPLACE FUNCTION update_pokemon_base_experience_trigger()
+RETURNS TRIGGER AS $$
 BEGIN
     IF NEW.base_experience < 0 THEN
         RAISE EXCEPTION 'Base experience cannot be negative.';
@@ -388,6 +473,13 @@ BEFORE INSERT OR UPDATE ON pokemon
 FOR EACH ROW
 EXECUTE FUNCTION update_pokemon_base_experience_trigger();
 ```
+This trigger function and its creation remain the same as in the original code. No modifications are required.
+
+To test the trigger, you can try inserting or updating a Pokémon with a negative base_experience value:
+```javascript
+INSERT INTO pokemon (identifier, species_id, height, weight, base_experience, "order", is_default)
+VALUES ('Test Pokémon', 1, 10, 20, -10, 1, true);
+```
 
 ## Task 7: Recursive Queries in SQL
 
@@ -398,9 +490,7 @@ WITH RECURSIVE pokemon_evolution_chain AS (
     SELECT id, identifier, evolves_from_species_id
     FROM pokemon_species
     WHERE id = 1 -- Starting Pokemon ID
-    
     UNION ALL
-    
     SELECT ps.id, ps.identifier, ps.evolves_from_species_id
     FROM pokemon_species ps
     JOIN pokemon_evolution_chain pec ON ps.evolves_from_species_id = pec.id
@@ -408,7 +498,20 @@ WITH RECURSIVE pokemon_evolution_chain AS (
 SELECT *
 FROM pokemon_evolution_chain;
 ```
-
+To use this recursive query, you can execute it with the desired starting Pokémon ID:
+```javascript
+WITH RECURSIVE pokemon_evolution_chain AS (
+    SELECT id, identifier, evolves_from_species_id
+    FROM pokemon_species
+    WHERE id = 1 
+    UNION ALL
+    SELECT ps.id, ps.identifier, ps.evolves_from_species_id
+    FROM pokemon_species ps
+    JOIN pokemon_evolution_chain pec ON ps.evolves_from_species_id = pec.id
+)
+SELECT *
+FROM pokemon_evolution_chain;
+```
 # Practical 5 Exercise
 
 ## Create a reddit comments database
