[chore]: update unit study guide

--- a/_posts/2024-02-20-unit2.md
+++ b/_posts/2024-02-20-unit2.md
@@ -1,5 +1,5 @@
 ---
-title: Study Guide for DBS101
+title: Study Guide for Unit 2
 sidebar:
   nav: guide-en
 aside:
@@ -20,6 +20,5 @@ aside:
 5. Redundant relationship set relations can be eliminated, like those between a weak entity set and its owner entity set.
 6. Relation schemas can be combined when there is a many-to-one relationship set between two entity sets and one entity set's participation is total. The primary key of the combined relation is that of the entity set into which the other set was merged
 7. Composite attributes in entity sets are converted to separate attributes for each component of the composite attribute. There is no separate attribute for the composite attribute itself.
-
 
 
